--- a/data/sources/brno-java-meetup.yaml
+++ b/data/sources/brno-java-meetup.yaml
@@ -160,9 +160,9 @@ series:
         dtstart: 2022-03-17 18:30:00+01:00
         dtend: 2022-03-17 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, May 5, 6:30 PM  CEST: Microservice architektura je principiálně distribuovaný systém se všemi výhodami i těžkostmi. Martin Štefanko ([https://twitter.com/xstefank](https://twitter.com/xstefank))'
-      og_title: Transakce v microservice architekturách, Thu, May 5, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/brno-java-meetup/events/285414870/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Transakce v microservice architekturách
         description: 'Brno Java Meetup
@@ -7476,3 +7476,30 @@ series:
         url: https://www.meetup.com/brno-java-meetup/events/273090874/
         dtstart: 2020-09-24 19:00:00+02:00
         dtend: 2020-09-24 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jun 23, 6:30 PM  CEST: V typickém microservice stacku je databáze často jediná komponenta, která neumožňuje reaktivní programování.
+
+
+        Jedním z cílů techniky CDC (Change data capture) je takové roz'
+      og_title: Debezium - (nejen) reaktivní rozhraní k databázi, Thu, Jun 23, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/brno-java-meetup/events/286439015/
+      ical:
+        summary: Debezium - (nejen) reaktivní rozhraní k databázi
+        description: 'Brno Java Meetup
+
+          Thursday, June 23 at 6:30 PM
+
+
+          V typickém microservice stacku je databáze často jediná komponenta, která neumožňuje reaktivní programování.  Jedním z cílů techniky CDC (Change data ...
+
+
+          https://www.meetup.com/brno-java-meetup/events/286439015/'
+        location: Živo U Palečka (Koliště 643, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_286439015@meetup.com
+        url: https://www.meetup.com/brno-java-meetup/events/286439015/
+        dtstart: 2022-06-23 18:30:00+02:00
+        dtend: 2022-06-23 20:30:00+02:00
