--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -31,11 +31,9 @@ series:
         dtstart: 2022-06-09 18:00:00+02:00
         dtend: 2022-06-09 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 6, 6:00 PM  CEST: Come to discover how to start contributing to Open Source software and hopefully get one pull request closer to a Hacktoberfest T-shirt!
-
-        This meetup is made especially for '
-      og_title: Hacktoberfest 2020 at MSD- create your first pull request, Tue, Oct 6, 2020, 6:00 PM   | Meetup
-      url: https://www.meetup.com/msd-it-meet-ups/events/273587090/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Hacktoberfest 2020 at MSD- create your first pull request
         description: 'MSD IT Meet Ups
