--- a/data/sources/coderetreat-cz.yaml
+++ b/data/sources/coderetreat-cz.yaml
@@ -6,13 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
   events:
   - meetupcom:
-      meta_description: 'Sat, Nov 7, 9:00 AM  CET: Rok 2020 moc nepřeje osobním setkáním a když už se nemůže setkat osobně, zkusíme to aspoň online.
-
-
-        Global Day of Codertreat, https://www.coderetreat.org je takovým malým sv'
-      og_title: Global Day of Coderetreat 2020 - ČR, Online, Sat, Nov 7, 2020, 9:00 AM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/9/5/0/3/600_492998147.jpeg
-      url: https://www.meetup.com/coderetreat-cz/events/273897052/
+      url: https://www.meetup.com/login/
       ical:
         summary: Global Day of Coderetreat 2020 - ČR, Online
         description: 'CodeRetreat CZ
@@ -34,10 +31,10 @@ series:
         dtstart: 2020-11-07 09:00:00+01:00
         dtend: 2020-11-07 16:00:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Nov 16, 9:00 AM  CET: Zveme vás na jednodenní intenzivní cvičení zaměřené na základy vývoje software zvané Coderetreat. Vývojáři si zde procvičí psaní čistého kódu, psaní testů a spolupráci v pá'
-      og_title: Global Day of CodeRetreat 2019 - Praha, Sat, Nov 16, 2019, 9:00 AM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
-      url: https://www.meetup.com/coderetreat-cz/events/265154359/
+      url: https://www.meetup.com/login/
       ical:
         summary: Global Day of CodeRetreat 2019 - Praha
         description: 'CodeRetreat CZ
@@ -59,10 +56,10 @@ series:
         dtstart: 2019-11-16 09:00:00+01:00
         dtend: 2019-11-16 18:00:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Nov 16, 9:00 AM  CET: Zveme vás na jednodenní intenzivní cvičení zaměřené na základy vývoje software zvané Coderetreat. Vývojáři si zde procvičí psaní čistého kódu, psaní testů a spolupráci v pá'
-      og_title: Global Day of Coderetreat 2019 - Olomouc, Sat, Nov 16, 2019, 9:00 AM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/8/b/9/600_485387289.jpeg
-      url: https://www.meetup.com/coderetreat-cz/events/265313497/
+      url: https://www.meetup.com/login/
       ical:
         summary: Global Day of Coderetreat 2019 - Olomouc
         description: 'CodeRetreat CZ
@@ -109,13 +106,10 @@ series:
         dtstart: 2018-11-17 09:00:00+01:00
         dtend: 2018-11-17 18:00:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Nov 13, 9:00 AM  CET: Změna: Původně jsme to plánovali dát offline. Bohužel epidemická situace se opět zhoršuje, přecházíme proto jako loni na online verzi Coderetreatu.
-
-
-        Zveme vás na jednodenní'
-      og_title: Global Day of Coderetreat 2021 - Online, Sat, Nov 13, 2021, 9:00 AM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
-      url: https://www.meetup.com/coderetreat-cz/events/281417882/
+      url: https://www.meetup.com/login/
       ical:
         summary: Global Day of Coderetreat 2021 - Online
         description: 'CodeRetreat CZ
