--- a/data/sources/fsharping.yaml
+++ b/data/sources/fsharping.yaml
@@ -6,10 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Aug 4, 6:00 PM  CEST: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects, and other great things (not only) from the IT world a'
-      og_title: FSharping |> Beer, Wed, Aug 4, 2021, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
-      url: https://www.meetup.com/fsharping/events/279609755/
+      url: https://www.meetup.com/login/
       ical:
         summary: FSharping |> Beer
         description: 'FSharping
@@ -30,10 +30,10 @@ series:
         dtstart: 2021-08-04 18:00:00+02:00
         dtend: 2021-08-04 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 19, 6:00 PM  CEST: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects and other great things (not only) from IT world and fu'
-      og_title: FSharping |> Beer, Wed, Aug 19, 2020, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
-      url: https://www.meetup.com/fsharping/events/271789552/
+      url: https://www.meetup.com/login/
       ical:
         summary: FSharping |> Beer
         description: 'FSharping
@@ -54,10 +54,10 @@ series:
         dtstart: 2020-08-19 18:00:00+02:00
         dtend: 2020-08-19 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Jun 5, 11:00 AM  CEST: 5. června nás čeká již třetí ročník virtuální konference fsharpConf, organizované lidmi z @fsharponline. Můžete se těšit na F# experty z celého světa. Uvidíte praktické vyu'
-      og_title: fsharpConf 2020, Fri, Jun 5, 2020, 11:00 AM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
-      url: https://www.meetup.com/fsharping/events/270899664/
+      url: https://www.meetup.com/login/
       ical:
         summary: fsharpConf 2020
         description: 'FSharping
@@ -79,18 +79,10 @@ series:
         dtstart: 2020-06-05 11:00:00+02:00
         dtend: 2020-06-05 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Feb 25, 6:00 PM  CET: We would like to invite you to our very first FShaping Functional Programming workshop.
-
-
-        ==== Basic information ====
-
-
-        Workshop is planned for 3 hours.
-
-        We will start at 18:0'
-      og_title: 'Josef Starýchfojtů: Advanced FP in F# (Workshop), Tue, Feb 25, 2020, 6:00 PM   | Meetup'
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
-      url: https://www.meetup.com/fsharping/events/268054108/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Josef Starýchfojtů: Advanced FP in F# (Workshop)'
         description: 'FSharping
