--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -4111,12 +4111,9 @@ series:
         dtstart: 2022-06-16 18:00:00+02:00
         dtend: 2022-06-17 01:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, May 19, 6:00 PM  CEST: **Zveme vás na 48. setkání PHP vývojářů do Prahy 9 - Vysočan, kde sídlí partner květnového setkání, vývojáři CareCloud.**
-
-
-        Čeká vás program nabitý přednáškami, networkingem'
-      og_title: 48. sraz přátel PHP v CareCloud v Praze, Thu, May 19, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/285475940/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 48. sraz přátel PHP v CareCloud v Praze
         description: 'Pražské srazy přátel PHP - Pehapkari.cz
