--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -30,10 +30,10 @@ series:
         dtstart: 2021-09-08 17:00:00+02:00
         dtend: 2021-09-08 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Sep 14, 6:00 PM  CEST: GraphQL is already far on the adoption curve. It is slowly becoming mainstream, and we start seeing new products being built primarily on GraphQL instead of REST. Most comp'
-      og_title: 'Backend Meetup: GraphQL at Scale, Tue, Sep 14, 2021, 6:00 PM   | Meetup'
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/c/0/6/600_498395846.jpeg
-      url: https://www.meetup.com/pipedrive-talks-prague/events/280151778/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Backend Meetup: GraphQL at Scale'
         description: 'Pipedrive Talks Prague
@@ -105,10 +105,10 @@ series:
         dtstart: 2020-02-25 07:30:00+01:00
         dtend: 2020-02-25 09:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Oct 19, 6:00 PM  CEST: If you want to succeed as a product-led company, you must ensure your teams are `empowered` enough to do the best work they can. As Marty Cagan famously wrote: "Great teams'
-      og_title: 'Product Meetup: Empowered Product Teams, Tue, Oct 19, 2021, 6:00 PM   | Meetup'
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/5/7/0/600_499105968.jpeg
-      url: https://www.meetup.com/pipedrive-talks-prague/events/280939384/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Product Meetup: Empowered Product Teams'
         description: 'Pipedrive Talks Prague
@@ -130,10 +130,10 @@ series:
         dtstart: 2021-10-19 18:00:00+02:00
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 16, 6:00 PM  CET: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
-      og_title: 'Backend Meetup: Advanced Microservices, Tue, Nov 16, 2021, 6:00 PM   | Meetup'
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/4/a/5/600_500150341.jpeg
-      url: https://www.meetup.com/pipedrive-talks-prague/events/281095226/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Backend Meetup: Advanced Microservices'
         description: 'Pipedrive Talks Prague
@@ -155,9 +155,9 @@ series:
         dtstart: 2021-11-16 18:00:00+01:00
         dtend: 2021-11-16 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 5, 6:00 PM  CEST: One possible career path for engineers is leadership: technical leadership, people management, or both. Typically you’d start by mentoring other engineers, facilitating mee'
-      og_title: 'Engineering Meetup: From Developer to a Leader, Tue, Apr 5, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/pipedrive-talks-prague/events/284508613/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Engineering Meetup: From Developer to a Leader'
         description: 'Pipedrive Talks Prague
