--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -6,15 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 8, 7:00 PM  CEST: Hello doers,
-
-
-        The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
-
-        The structure of the session will be one '
-      og_title: Prague DevOps meetup online (September), Wed, Sep 8, 2021, 7:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
-      url: https://www.meetup.com/prague-devops-meetup/events/280234441/
+      url: https://www.meetup.com/login/
       ical:
         summary: Prague DevOps meetup online (September)
         description: 'Prague DevOps Meetup
@@ -123,15 +118,10 @@ series:
         dtstart: 2020-02-24 18:00:00+01:00
         dtend: 2020-02-24 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 3, 6:00 PM  CET: Hello doers,
-
-
-        The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
-
-        The structure of the session will be one'
-      og_title: Prague DevOps meetup online (November), Wed, Nov 3, 2021, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
-      url: https://www.meetup.com/prague-devops-meetup/events/281198432/
+      url: https://www.meetup.com/login/
       ical:
         summary: Prague DevOps meetup online (November)
         description: 'Prague DevOps Meetup
@@ -153,14 +143,9 @@ series:
         dtstart: 2021-11-03 18:00:00+01:00
         dtend: 2021-11-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Feb 2, 7:00 PM  CET: Hello doers,
-
-
-        The fifth online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
-
-        The structure of '
-      og_title: Prague DevOps meetup online (February 2022), Wed, Feb 2, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/prague-devops-meetup/events/283152511/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Prague DevOps meetup online (February 2022)
         description: 'Prague DevOps Meetup
@@ -211,14 +196,9 @@ series:
         dtstart: 2022-03-02 19:00:00+01:00
         dtend: 2022-03-02 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Apr 6, 7:00 PM  CEST: Hello doers,
-
-
-        The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
-
-        The structure of'
-      og_title: Prague DevOps meetup hybrid (April 2022), Wed, Apr 6, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/prague-devops-meetup/events/283816829/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Prague DevOps meetup hybrid (April 2022)
         description: 'Prague DevOps Meetup
