--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -6,16 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/7/a/0/600_485066528.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 6:00 PM  CEST: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • Building event-drive'
-      og_title: Regular Prague AWS User Group Meetup, Wed, Oct 20, 2021, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/2/f/600_498808207.jpeg
-      url: https://www.meetup.com/prague-aws-meetup/events/280751506/
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
@@ -37,13 +31,10 @@ series:
         dtstart: 2021-10-20 18:00:00+02:00
         dtend: 2021-10-20 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jan 13, 6:00 PM  CET: We would like to invite you for the first online AWS CZSK User Group Meetup organized together with Amazon and AWS User Group Slovakia.
-
-
-        Due to the fact that we can not mee'
-      og_title: AWS CZSK User Group Virtual Meetup, Wed, Jan 13, 2021, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/3/2/f/600_488313583.jpeg
-      url: https://www.meetup.com/prague-aws-meetup/events/275297097/
+      url: https://www.meetup.com/login/
       ical:
         summary: AWS CZSK User Group Virtual Meetup
         description: 'Prague AWS User Group
@@ -65,16 +56,10 @@ series:
         dtstart: 2021-01-13 18:00:00+01:00
         dtend: 2021-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Dec 11, 6:00 PM  CET: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • Experience with migr'
-      og_title: Regular Prague AWS User Group Meetup, Wed, Dec 11, 2019, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/8/4/e/600_487135374.jpeg
-      url: https://www.meetup.com/prague-aws-meetup/events/266233892/
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
@@ -96,16 +81,10 @@ series:
         dtstart: 2019-12-11 18:00:00+01:00
         dtend: 2019-12-11 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Sep 17, 6:00 PM  CEST: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • How to migrate a lar'
-      og_title: Regular Prague AWS User Group Meetup, Tue, Sep 17, 2019, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/9/f/c/600_476495324.jpeg
-      url: https://www.meetup.com/prague-aws-meetup/events/264129445/
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
