--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -449,14 +449,9 @@ series:
         dtstart: 2022-06-15 18:00:00+02:00
         dtend: 2022-06-15 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jun 8, 6:00 PM  CEST: **Join the first Productboard Backend Meetup in Brno!**
-
-
-        **About this event**
-
-        Join us for our in-person meetup at Impact Hub Brno! We’re excited to host **our first Backend'
-      og_title: Backend Meetup | BRNO, Wed, Jun 8, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/productboard-meetups/events/286390582/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Backend Meetup | BRNO
         description: 'Productboard Meetups
