--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -67,12 +67,9 @@ series:
         dtstart: 2022-04-20 19:00:00+02:00
         dtend: 2022-04-20 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, May 18, 7:00 PM  CEST: **Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava.**
-
-
-        **We meet at the Holešovická šachta. You can look forward to one presentation, l'
-      og_title: Pyvo Prague 132, Wed, May 18, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydchbxb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Pyvo Prague 132
         description: 'Pyvo: Prague Python Meetup
