--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -161,12 +161,9 @@ series:
         dtstart: 2021-11-25 19:00:00+01:00
         dtend: 2021-11-25 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Mar 31, 7:00 PM  CEST: Coding Session
-
-
-        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
-      og_title: Coding session V7, Thu, Mar 31, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/the-social-programers/events/284822397/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Coding session V7
         description: 'The Social Programmers
@@ -215,12 +212,9 @@ series:
         dtstart: 2022-04-07 19:30:00+02:00
         dtend: 2022-04-07 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Apr 13, 7:30 PM  CEST: Coding Session
-
-
-        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
-      og_title: Coding session V8, Wed, Apr 13, 2022, 7:30 PM   | Meetup
-      url: https://www.meetup.com/the-social-programers/events/285201541/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Coding session V8
         description: 'The Social Programmers
@@ -242,12 +236,9 @@ series:
         dtstart: 2022-04-13 19:30:00+02:00
         dtend: 2022-04-13 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Apr 21, 7:00 PM  CEST: Coding Session
-
-
-        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
-      og_title: Coding session V9, Thu, Apr 21, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/the-social-programers/events/285365084/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Coding session V9
         description: 'The Social Programmers
@@ -269,12 +260,9 @@ series:
         dtstart: 2022-04-21 19:00:00+02:00
         dtend: 2022-04-21 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, May 5, 7:00 PM  CEST: Coding Session
-
-
-        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
-      og_title: Coding session V10, Thu, May 5, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/the-social-programers/events/285692669/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Coding session V10
         description: 'The Social Programmers
