--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -209,14 +209,9 @@ series:
         dtstart: 2022-02-01 19:00:00+01:00
         dtend: 2022-02-01 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 1, 7:00 PM  CET: Tentokrát se potkáme osobně u pivka a dýmky v Loft N8.
-
-
-        Skywalk systems a Parallel Garden - Teplo, Bitcoin, Stévie
-
-        Využití generovaného tepla z těžby kryptoměn nebo serverů'
-      og_title: Pěstování květin s pomocí kryptoměn, Tue, Mar 1, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/topmonks-caffe/events/284177540/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Pěstování květin s pomocí kryptoměn
         description: 'TopMonks Caffè
@@ -238,12 +233,9 @@ series:
         dtstart: 2022-03-01 19:00:00+01:00
         dtend: 2022-03-01 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 5, 7:00 PM  CEST: Potkáme se osobně u pivka a dýmky v Loft N8.
-
-
-        Svůj příběh o změně kariéry nám prozradí Gabriela Jičínská, Jirka Píša, Phuc Nguyen a Holdy-Kurth Mouyabi. Přijďte si poslechn'
-      og_title: Změna kariéry, Tue, Apr 5, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/topmonks-caffe/events/284921450/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Změna kariéry
         description: 'TopMonks Caffè
@@ -265,9 +257,9 @@ series:
         dtstart: 2022-04-05 19:00:00+02:00
         dtend: 2022-04-05 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, May 3, 7:00 PM  CEST: Další TopMonks Caffé bude mít nosné téma ze světa crypta a to konkrétně decentrilizované finance. Povídat bude Lumír Mrkva a Dušan Kovačič.'
-      og_title: Decentralised finances, Tue, May 3, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/topmonks-caffe/events/285524034/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Decentralised finances
         description: 'TopMonks Caffè
@@ -6590,17 +6582,9 @@ series:
         dtstart: 2022-02-01 19:00:00+01:00
         dtend: 2022-02-01 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jun 7, 7:00 PM  CEST: Přijďte si poslechnout přednášky na téma bezpečnost.
-
-
-        Čekají nás tři přednášky:
-
-
-        1. **Miroslav Hanák** (SW dev) a **Petr Novák** (R&D) (TurrisTech by CZ.NIC)
-
-        2. **Jiří Koho'
-      og_title: Kyberbezpečnost, včera, dnes a zítra, Tue, Jun 7, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/topmonks-caffe/events/286236196/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Kyberbezpečnost, včera, dnes a zítra
         description: 'TopMonks Caffè
