--- a/data/sources/ysoft-tech-hour.yaml
+++ b/data/sources/ysoft-tech-hour.yaml
@@ -6,10 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/4/6/0/a/600_501917930.jpeg
   events:
   - meetupcom:
-      meta_description: 'Tue, Mar 30, 5:30 PM  CEST: Žijeme v době rychlého vývoje a ad-hoc řešení a v případě testování to platí dvojnásob. Je pak velký kumšt se v tom všem vyznat. Prozkoumejte s námi různé typy testů a jeji'
-      og_title: Každý test jiná ves, Tue, Mar 30, 2021, 5:30 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/f/e/4/600_495113220.jpeg
-      url: https://www.meetup.com/ysoft-th/events/276847788/
+      url: https://www.meetup.com/login/
       ical:
         summary: Každý test jiná ves
         description: 'Y Soft: Technology Hour
@@ -31,10 +31,10 @@ series:
         dtstart: 2021-03-30 17:30:00+02:00
         dtend: 2021-03-30 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Sep 8, 5:30 PM  CEST: In large scale product development with multiple teams, organizing and facilitating events is important to optimize transparency, provide opportunities for collaboration, a'
-      og_title: Remote facilitation of distributed multi-team events , Tue, Sep 8, 2020, 5:30 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/c/5/c/1/600_491810625.jpeg
-      url: https://www.meetup.com/ysoft-th/events/272570292/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Remote facilitation of distributed multi-team events '
         description: 'Y Soft: Technology Hour
@@ -56,10 +56,10 @@ series:
         dtstart: 2020-09-08 17:30:00+02:00
         dtend: 2020-09-08 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jul 8, 6:00 PM  CEST: After 1.5 years on the agile journey, we now have 13 self-managed teams and no managers or scrum masters. While we’re definitely not done with this, and there’re always thi'
-      og_title: Y Soft LeSS Meetup , Wed, Jul 8, 2020, 6:00 PM   | Meetup
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/4/6/0/e/600_490997934.jpeg
-      url: https://www.meetup.com/ysoft-th/events/271492610/
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Y Soft LeSS Meetup '
         description: 'Y Soft: Technology Hour
@@ -106,9 +106,9 @@ series:
         dtstart: 2020-05-11 17:30:00+02:00
         dtend: 2020-05-11 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Feb 15, 6:00 PM  CET: Mnozí lidé používají tyto termíny zcela zaměnitelně. A není divu - všechny se dají použít k označení onoho okýnka s bílým textem na černém pozadí, do kterého píšete příkazy'
-      og_title: Terminály, shelly a konzole, Tue, Feb 15, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/ysoft-th/events/283522925/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Terminály, shelly a konzole
         description: 'Y Soft: Technology Hour
